wrap code correctly in pygments using -O wrapcode

--- a/static/css/code_pygments.css
+++ b/static/css/code_pygments.css
@@ -1,19 +1,20 @@
-.highlight {
+.highlight pre {
+  margin: 0;
   overflow: auto;
   background: var(--color-code-bg);
   color: var(--color-code-fg);
   padding: 0.4rem 1rem;
   margin-bottom: 1em;
+  line-height: 1.3;
 }
 
-.highlight pre {
-  margin: 0;
+pre code {
   font-family: var(--font-monospace), monospace;
   font-size: 0.87em;
   font-variant-ligatures: none;
 }
 
-code {
+:not(pre) > code {
   font-family: var(--font-monospace), monospace;
   font-size: 0.85em;
   font-variant-ligatures: none;
